--- a/src/components/form/components/Input.scss
+++ b/src/components/form/components/Input.scss
@@ -2,35 +2,27 @@
 	&__container {
 		background-color: #4b4052;
 		margin: 10px 0px;
-		width: 95%;
+		width: 65.1%;
 		display: flex;
+		justify-content: center;
 		align-items: center;
-		border-left: 10px solid red;
-		border-radius: 0px 5px 5px 0px;
+		border-radius: 8px;
 	}
-	text-align: center;
-	border: none;
-	background-color: #4b4052;
+	border: .5px solid $other-border;
 	outline: none;
 	width: 100%;
-	border-radius: 0px 5px 5px 0px;
-	padding: 15px 0px;
-	&__label {
-		padding-left: 15px;
-	}
+	border-radius: 8px;
+	padding: 14px 16px;
 }
 
 input {
-	color: white;
-	font-weight: bold;
-	font-size: 1.2rem;
-	&:focus {
-		color: white;
-		font-weight: bold;
-		font-size: 1.2rem;
-	}
+	font-family: $font-primary;
+	font-weight: 400;
 	&::placeholder {
-		color: rgb(204, 204, 204);
-		font-size: 1.2rem;
+		font-family: $font-primary;		
+		font-weight: 400;
+		color: $text-gray;
+		font-size: .875rem;
+		// padding-left: 16px;
 	}
 }
