--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,8 @@ $font-secondary: 'SF Pro Display', sans-serif;
 /* Colors */
 $bg-card: #F9F9F9;
 $bg-button: rgba(24, 24, 24, 0.7);
+$bg-navbar: rgba(27, 62, 131, 0.3);
+$bg-color: rgba(27, 62, 131, 1);
 $other-gray: #E0E0E0;
 
 $text-gray: #8F8F8F;
