--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $font-secondary: 'SF Pro Display', sans-serif;
 
 /* Colors */
 $bg-card: #F9F9F9;
+$bg-select: rgba(42, 82, 140, .85);
 $bg-button: rgba(24, 24, 24, 0.7);
 $bg-navbar: rgba(27, 62, 131, 0.3);
 $bg-color: rgba(27, 62, 131, 1);
