--- a/src/components/buttons/settingsFolderButton/SettingsFolderButton.scss
+++ b/src/components/buttons/settingsFolderButton/SettingsFolderButton.scss
@@ -3,15 +3,14 @@
 	align-items: center;
 	width: max-content;
 	cursor: pointer;
+	&__container {
+		display: flex;
+		flex-direction: column;
+		position: relative;
+	}
 	&__image {
 		width: 19px;
 		height: 19px;
 		padding-right: 12.5px;
-	}
-	&__name {
-		font-family: $font-secondary;
-		font-size: 16px;
-		font-weight: 400;
-		color: white;
 	}
 }
