--- a/src/components/navAppField/NavAppField.scss
+++ b/src/components/navAppField/NavAppField.scss
@@ -3,4 +3,7 @@
 	grid-template-columns: repeat( auto-fit, 133.1px );
 	justify-items: center;
 	width: 100%;
+	margin-bottom: 25px;
+	position: fixed;
+	bottom: 0;
 }
