paper complete, contacts page add and in progress

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -29,6 +29,7 @@
 @import '../../pages/save/Save.scss';
 @import '../../pages/gallery/Gallery.scss';
 @import '../../pages/paper/Paper.scss';
+@import '../../pages/contacts/Contacts.scss';
 
 body {
 	background-color: $bg-color;
