--- a/src/pages/paper/Paper.scss
+++ b/src/pages/paper/Paper.scss
@@ -4,9 +4,25 @@
 	background-color: rgba(95, 138, 250, .3);
 	border: none;
 	border-radius: 22px;
+	height: 65vh;
+	margin-top: 60px;
+	overflow-y: scroll;
+	&::-webkit-scrollbar {
+		width: 10px;
+	}
+	&::-webkit-scrollbar-track {
+		border-radius: 10px;
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+		display: none;
+	}
+	&::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+		margin-right: 15px;
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, .5);
+	}
 }
 .calendar {
-	padding: 40px 25px;
+	padding: 30px 0px 30px 30px;
 	&__title {
 		font-size: 41px;
 		font-family: $font-secondary;
@@ -19,19 +35,30 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	
 	&__viewContainer {
 		width: 80%;
 	}
 	&__month-view {
 		&__days {
-			column-gap: 48.75px;
+			column-gap: 48.7px;
 			row-gap: 20px;
 			&__day {
 				max-width: 60px!important;
 				height: 60px;
-				border: 1px solid black;
 				background-color: transparent;
+				border: none;
 				border-radius: 50%;
+				& abbr {
+					color: white;
+					font-family: $font-secondary;
+					font-size: 23px;
+					font-weight: 400;
+				}
+				&--neighboringMonth {
+					border: 1.65px solid rgb(244, 224, 244);
+					box-shadow: inset 0px 0px 6.6px 1px rgba(0, 0, 0, .25);
+				}
 			}
 		}
 		&__weekdays {
@@ -51,6 +78,10 @@
 			}
 			
 		}
+	}
+	&__tile--active {
+		border: 1.65px solid #F4E0F4;
+		box-shadow: inset 0px 0px 6.6px 0px #FFFFFF;
 	}
 	&__navigation {
 		width: 80%;
