contacts in progress

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,34 +2,11 @@
 @import './reset.scss';
 @import './globals.scss';
 // Buttons
-@import '../../components/buttons/formButton/FormButton.scss';
-@import '../../components/buttons/loginButton/LoginButton.scss';
-@import '../../components/buttons/appButton/AppButton.scss';
-@import '../../components/buttons/folderButton/FolderButton.scss';
-@import '../../components/buttons/settingsFolderButton/SettingsFolderButton.scss';
-@import '../../components/buttons/sortFolderButton/SortFolderButton.scss';
-@import '../../components/buttons/createFolderButton/CreateFolderButton.scss';
-@import '../../components/buttons/optionButton/OptionButton.scss';
-@import '../../components/buttons/selectFolderButton/SelectFolderButton.scss';
+@import './buttons.scss';
 // Components
-@import '../../components/form/components/Input.scss';
-@import '../../components/form/Auth.scss';
-@import '../../components/navbar/Navbar.scss';
-@import '../../components/appField/AppField.scss';
-@import '../../components/user/User.scss';
-@import '../../components/navAppField/NavAppField.scss';
-@import '../../components/folderNavbar/FolderNavbar.scss';
-@import '../../components/folderNavbar/GalleryNavbar.scss';
-@import '../../components/select/Select.scss';
-@import '../../components/searchField/SearchField.scss';
-@import '../../components/photoFrame/PhotoFrame.scss';
-@import '../../components/paperInfoBar/PaperInfoBar.scss';
+@import './components.scss';
 // Pages
-@import '../../pages/main/Main.scss';
-@import '../../pages/save/Save.scss';
-@import '../../pages/gallery/Gallery.scss';
-@import '../../pages/paper/Paper.scss';
-@import '../../pages/contacts/Contacts.scss';
+@import './pages.scss';
 
 body {
 	background-color: $bg-color;
