contacts page complete 90%

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -14,3 +14,4 @@
 @import '../../components/infoCardField/InfoCardField.scss';
 @import '../../components/infoCardAddress/InfoCardAddress.scss';
 @import '../../components/contactLink/ContactLink.scss';
+@import '../../components/contactsNavigate/ContactsNavigate.scss';
