--- a/src/pages/contacts/Contacts.scss
+++ b/src/pages/contacts/Contacts.scss
@@ -29,6 +29,15 @@
 	&__list {
 		grid-column: 1 / 2;
 		overflow-y: scroll;
+		&::-webkit-scrollbar {
+			width: 10px;
+		}
+		&::-webkit-scrollbar-track {
+			display: none;
+		}
+		&::-webkit-scrollbar-thumb {
+			display: none;
+		}
 	}
 	&__info {
 	}
