--- a/src/pages/paper/Paper.scss
+++ b/src/pages/paper/Paper.scss
@@ -11,14 +11,10 @@
 		width: 10px;
 	}
 	&::-webkit-scrollbar-track {
-		border-radius: 10px;
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
 		display: none;
 	}
 	&::-webkit-scrollbar-thumb {
-		border-radius: 10px;
-		margin-right: 15px;
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, .5);
+		display: none;
 	}
 }
 .calendar {
