project page in progress

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -15,3 +15,4 @@
 @import '../../components/infoCardAddress/InfoCardAddress.scss';
 @import '../../components/contactLink/ContactLink.scss';
 @import '../../components/contactsNavigate/ContactsNavigate.scss';
+@import '../../components/projectNav/ProjectNav.scss';
