--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -3,3 +3,4 @@
 @import '../../pages/gallery/Gallery.scss';
 @import '../../pages/paper/Paper.scss';
 @import '../../pages/contacts/Contacts.scss';
+@import '../../pages/project/Project.scss';
