project page complete >50%

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -16,3 +16,6 @@
 @import '../../components/contactLink/ContactLink.scss';
 @import '../../components/contactsNavigate/ContactsNavigate.scss';
 @import '../../components/projectNav/ProjectNav.scss';
+@import '../../components/projectTasks/ProjectTasks.scss';
+@import '../../components/taskCard/TaskCard.scss';
+@import '../../components/projectNavLink/ProjectNavLink.scss';
