--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -8,6 +8,9 @@ $bg-select: rgba(42, 82, 140, .85);
 $bg-button: rgba(24, 24, 24, 0.7);
 $bg-navbar: rgba(27, 62, 131, 0.3);
 $bg-color: rgba(27, 62, 131, 1);
+$transparent-white: rgba(255, 255, 255, .1);
+$quarter-trans-white: rgba(255, 255, 255, .2);
+$half-trans-white: rgba(255, 255, 255, .4);
 $other-gray: #E0E0E0;
 
 $text-gray: #8F8F8F;
