project page important part

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -19,3 +19,4 @@
 @import '../../components/projectTasks/ProjectTasks.scss';
 @import '../../components/taskCard/TaskCard.scss';
 @import '../../components/projectNavLink/ProjectNavLink.scss';
+@import '../../components/projectImportant/ProjectImportant.scss';
