--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -20,3 +20,4 @@
 @import '../../components/taskCard/TaskCard.scss';
 @import '../../components/projectNavLink/ProjectNavLink.scss';
 @import '../../components/projectImportant/ProjectImportant.scss';
+@import '../../components/projectIdeas/ProjectIdeas.scss';
