--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,6 @@
 /* Fonts */
-$font-primary: 'Inter', sans-serif;
-$font-secondary: 'SF Pro Display', sans-serif;
+$font-main: 'SF Pro Display', sans-serif;
+$font-secondary: 'Inter', sans-serif;
 
 /* Colors */
 $bg-card: #F9F9F9;
