--- a/src/components/appField/AppField.scss
+++ b/src/components/appField/AppField.scss
@@ -1,6 +1,5 @@
 .appField {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, 100.1px);
+	grid-template-columns: repeat(5, 100px);
 	grid-gap: 22px 55px;
-	width: 37.95%;
 }
