--- a/src/components/buttons/formButton/FormButton.scss
+++ b/src/components/buttons/formButton/FormButton.scss
@@ -13,7 +13,7 @@
 	outline: none;
 	background-color: $bg-button;
 
-	font-family: $font-secondary;
+	font-family: $font-main;
 	font-weight: 400;
 	color: white;
 	transition: all .2s ease;
