--- a/src/components/buttons/interactionButton/InteractionButton.scss
+++ b/src/components/buttons/interactionButton/InteractionButton.scss
@@ -3,7 +3,7 @@
 	background-color: transparent;
 	cursor: pointer;
 	&__name {
-		font-family: $font-secondary;
+		font-family: $font-main;
 		font-size: 12px;
 		font-weight: 400;
 		color: white;
