--- a/src/components/contactInfoCard/ContactInfoCard.scss
+++ b/src/components/contactInfoCard/ContactInfoCard.scss
@@ -20,7 +20,7 @@
 		border-radius: 50%;
 	}
 	&__contactName {
-		font-family: $font-secondary;
+		font-family: $font-main;
 		font-size: 26px;
 		font-weight: 400;
 		color: white;
