--- a/src/components/infoCardField/InfoCardField.scss
+++ b/src/components/infoCardField/InfoCardField.scss
@@ -2,7 +2,7 @@
 	border-bottom: 1.5px solid rgba(255, 255, 255, .8);
 	padding-top: 20px;
 	&__label, &__data {
-		font-family: $font-secondary;
+		font-family: $font-main;
 		color: white;
 		font-weight: 400;
 		padding-bottom: 10px;
