--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -5,7 +5,7 @@
 	background-color: $bg-navbar;
 	width: 100%;
 
-	font-family: $font-primary;
+	font-family: $font-secondary;
 	color: white;
 	
 	&__logotype {
