--- a/src/components/paperInfoBar/PaperInfoBar.scss
+++ b/src/components/paperInfoBar/PaperInfoBar.scss
@@ -8,7 +8,7 @@
 		grid-template-columns: 0fr 1fr;
 		column-gap: 20px;
 		color: white;
-		font-family: $font-secondary;
+		font-family: $font-main;
 	}
 	&__day {
 		font-size: 118.8px;
