--- a/src/components/projectTasks/ProjectTasks.scss
+++ b/src/components/projectTasks/ProjectTasks.scss
@@ -1,6 +1,6 @@
 .projectTasks {
 	&__title {
-		font-family: $font-secondary;
+		font-family: $font-main;
 		font-size: 36px;
 		font-weight: 400;
 		color: white;
