--- a/src/pages/paper/Paper.scss
+++ b/src/pages/paper/Paper.scss
@@ -1,12 +1,16 @@
 .paper {
+	&__container {
+		display: flex;
+		justify-content: center;
+		height: 105vh;
+	}
 	display: grid;
 	grid-template-columns: 30% 70%;
 	background-color: rgba(95, 138, 250, .3);
 	border: none;
 	border-radius: 22px;
-	height: 65vh;
+	height: 82vh;
 	margin-top: 60px;
-	overflow-y: scroll;
 	&::-webkit-scrollbar {
 		width: 10px;
 	}
@@ -21,7 +25,7 @@
 	padding: 30px 0px 30px 30px;
 	&__title {
 		font-size: 41px;
-		font-family: $font-secondary;
+		font-family: $font-main;
 		font-weight: 400;
 		color: white;
 	}
@@ -47,7 +51,7 @@
 				border-radius: 50%;
 				& abbr {
 					color: white;
-					font-family: $font-secondary;
+					font-family: $font-main;
 					font-size: 23px;
 					font-weight: 400;
 				}
@@ -65,7 +69,7 @@
 				& abbr {
 					text-decoration: none;
 					text-transform: uppercase;
-					font-family: $font-secondary;
+					font-family: $font-main;
 					font-size: 23px;
 					font-weight: 400;
 					color: white;
@@ -93,7 +97,7 @@
 		&__label, &__prev-button, &__next-button {
 			border: none;
 			background-color: transparent;
-			font-family: $font-secondary;
+			font-family: $font-main;
 			text-align: center;
 			width: min-content;
 			cursor: pointer;
@@ -109,4 +113,15 @@
 		}
 	}
 	
+}
+
+@media screen and (max-width: 1366px) {
+	.paper {
+		height: 100vh;
+		&__container {
+			width: 98%;
+			height: 130vh;
+		}
+		
+	}
 }
