--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,6 +1,6 @@
 // Font
 .font-secondary {
-	font-family: $font-secondary;
+	font-family: $font-main;
 	font-size: 16px;
 	font-weight: 400;
 	color: white;
@@ -9,6 +9,6 @@
 // Page
 .page-wrapper {
 	margin: 0 auto;
-	height: 85vh;
+	height: 100vh;
 	width: 70%;
 }
