--- a/src/components/buttons/appButton/AppButton.scss
+++ b/src/components/buttons/appButton/AppButton.scss
@@ -28,7 +28,7 @@
 	&__name {
 		padding-top: 7px;
 		color: white;
-		font-family: $font-secondary;
+		font-family: $font-main;
 		font-size: 1rem;
 		font-weight: 400;
 		text-align: center;
