--- a/src/components/buttons/folderButton/FolderButton.scss
+++ b/src/components/buttons/folderButton/FolderButton.scss
@@ -6,7 +6,7 @@
 	}
 	&__description {
 		color: white;
-		font-family: $font-secondary;
+		font-family: $font-main;
 		font-size: 18px;
 		font-weight: 400;
 		text-align: center;
