--- a/src/components/contactsNavigate/ContactsNavigate.scss
+++ b/src/components/contactsNavigate/ContactsNavigate.scss
@@ -23,7 +23,7 @@
 		text-transform: uppercase;
 		text-decoration: none;
 		color: white;
-		font-family: $font-secondary;
+		font-family: $font-main;
 		font-size: 20px;
 		font-weight: 400;
 		position: relative;
