--- a/src/components/form/Auth.scss
+++ b/src/components/form/Auth.scss
@@ -7,7 +7,7 @@
 		border-bottom: .5px solid $other-gray;
 		& h1 {
 			text-align: center;
-			font-family: $font-primary;
+			font-family: $font-secondary;
 			font-weight: 600;
 			padding: 16px 0px 15px 0px;
 		}
