--- a/src/components/projectNavLink/ProjectNavLink.scss
+++ b/src/components/projectNavLink/ProjectNavLink.scss
@@ -1,7 +1,7 @@
 .projectNavLink {
 	text-decoration: none;
 	color: white;
-	font-family: $font-secondary;
+	font-family: $font-main;
 	font-size: 18px;
 	font-weight: 400;
 	padding: 25px 0px;
