--- a/src/components/searchField/SearchField.scss
+++ b/src/components/searchField/SearchField.scss
@@ -6,14 +6,14 @@
 		height: 35px;
 		width: 350px;
 		padding-left: 10px;
-		font-family: $font-secondary;
+		font-family: $font-main;
 		font-size: 16px;
 		&:focus {
 			outline-width: 1px;
 			outline-color: rgba(27, 62, 131, .44);
 		}
 		&::placeholder {
-			font-family: $font-secondary;
+			font-family: $font-main;
 			font-size: 16px;
 			font-weight: 400;
 		}
