--- a/src/components/user/User.scss
+++ b/src/components/user/User.scss
@@ -3,8 +3,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-top: 120px;
-	margin-bottom: 60px;
 	&__avatar {
 		width: 177px;
 		height: 177px;
@@ -12,7 +10,7 @@
 		background: center / cover repeat url('../../assets/images/pic/example-ava.jpg');
 	}
 	&__description {
-		font-family: $font-secondary;
+		font-family: $font-main;
 		color: white;
 		font-weight: normal;
 		font-size: 2.25rem;
