--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -1,8 +1,14 @@
 .main {
+	&__wrapper {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-around;
+		height: 89vh;
+	}
 	&__container {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		flex-direction: column;
 	}
 }
