--- a/src/pages/save/Save.scss
+++ b/src/pages/save/Save.scss
@@ -1,15 +1,19 @@
 .save {
+	height: 59vh;
+	width: 100%;
 	&__wrapper {
 		margin: 0 auto;
-		height: 100vh;
+		height: 85vh;
 		width: 70%;
+		display: flex;
+		justify-content: center;
 	}
 	&__container {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, 119px);
 		grid-gap: 55px;
 		width: 100%;
-		height: 70%;
+		height: 100%;
 		overflow-y: scroll;
 		margin: 0 auto;
 		&::-webkit-scrollbar {
