add map, need to finish todoAside component

--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -4,3 +4,4 @@
 @import '../../pages/paper/Paper.scss';
 @import '../../pages/contacts/Contacts.scss';
 @import '../../pages/project/Project.scss';
+@import '../../pages/map/MapPage.scss';
