--- a/src/pages/project/Project.scss
+++ b/src/pages/project/Project.scss
@@ -1,6 +1,7 @@
 .project {
 	display: grid;
 	grid-template-columns: 1fr 380px;
+	justify-items: center;
 	&__outlet {
 		background-color: $transparent-white;
 		border-radius: 8px;
@@ -10,5 +11,8 @@
 	&__main {
 		display: grid;
 		grid-template-columns: 445px 1fr;
+	}
+	&__wrapper {
+		width: 100%;
 	}
 }
