--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -21,3 +21,4 @@
 @import '../../components/projectNavLink/ProjectNavLink.scss';
 @import '../../components/projectImportant/ProjectImportant.scss';
 @import '../../components/projectIdeas/ProjectIdeas.scss';
+@import '../../components/projectAside/ProjectAside.scss';
