adding search and job pages

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -22,3 +22,6 @@
 @import '../../components/projectImportant/ProjectImportant.scss';
 @import '../../components/projectIdeas/ProjectIdeas.scss';
 @import '../../components/projectAside/ProjectAside.scss';
+@import '../../components/searchBrowser/SearchBrowser.scss';
+@import '../../components/jobTodo/JobTodo.scss';
+@import '../../components/jobTree/JobTree.scss';
