--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -5,3 +5,5 @@
 @import '../../pages/contacts/Contacts.scss';
 @import '../../pages/project/Project.scss';
 @import '../../pages/map/MapPage.scss';
+@import '../../pages/browser/Browser.scss';
+@import '../../pages/job/Job.scss';
