--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -11,6 +11,7 @@ $bg-color: rgba(27, 62, 131, 1);
 $transparent-white: rgba(255, 255, 255, .1);
 $quarter-trans-white: rgba(255, 255, 255, .2);
 $half-trans-white: rgba(255, 255, 255, .4);
+$quarter-trans-black: rgba(0, 0, 0, .25);
 $other-gray: #E0E0E0;
 
 $text-gray: #8F8F8F;
