game page added, job page work in progress

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -25,3 +25,4 @@
 @import '../../components/searchBrowser/SearchBrowser.scss';
 @import '../../components/jobTodo/JobTodo.scss';
 @import '../../components/jobTree/JobTree.scss';
+@import '../../components/gamesLink/GamesLink.scss';
