--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -7,3 +7,4 @@
 @import '../../pages/map/MapPage.scss';
 @import '../../pages/browser/Browser.scss';
 @import '../../pages/job/Job.scss';
+@import '../../pages/games/Games.scss';
