--- a/src/pages/job/Job.scss
+++ b/src/pages/job/Job.scss
@@ -1,4 +1,10 @@
 .job {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: center;
+    &__container {
+        width: 70%;
+
+        display: grid;
+        grid-template-columns: .5fr 1fr 1fr;
+    }
 }
