--- a/src/components/jobTree/JobTree.scss
+++ b/src/components/jobTree/JobTree.scss
@@ -1,4 +1,5 @@
 .jobTree {
+    margin-top: 40px;
 
     &__link {
         cursor: pointer;
@@ -6,5 +7,14 @@
         color: white;
         font-size: 24px;
         font-weight: 400;
+        margin: 20px 0px;
+        width: fit-content;
+        &--active {
+            padding: 12px 26px;
+            background: linear-gradient(100.65deg, #3037DA, #3E9DF8);
+            border-radius: 16px;
+            box-shadow: 0px 0px 14px 0px rgba(17, 14, 154, .82);
+        }
     }
+
 }
