job page complete 99%

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -26,3 +26,4 @@
 @import '../../components/jobTodo/JobTodo.scss';
 @import '../../components/jobTree/JobTree.scss';
 @import '../../components/gamesLink/GamesLink.scss';
+@import '../../components/jobRoadMap/JobRoadMap.scss';
