bowser page in progress

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -27,3 +27,4 @@
 @import '../../components/jobTree/JobTree.scss';
 @import '../../components/gamesLink/GamesLink.scss';
 @import '../../components/jobRoadMap/JobRoadMap.scss';
+@import '../../components/suggestionsBrowser/SuggestionsBrowser.scss';
