browser page complete

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,7 @@
 /* Fonts */
 $font-main: 'SF Pro Display', sans-serif;
 $font-secondary: 'Inter', sans-serif;
+$font-other: 'Roboto', sans-serif;
 
 /* Colors */
 $bg-card: #F9F9F9;
