chat page added

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -28,3 +28,6 @@
 @import '../../components/gamesLink/GamesLink.scss';
 @import '../../components/jobRoadMap/JobRoadMap.scss';
 @import '../../components/suggestionsBrowser/SuggestionsBrowser.scss';
+@import '../../components/chatRooms/ChatRooms.scss';
+@import '../../components/chatRoomsTab/ChatRoomsTab.scss';
+@import '../../components/chatFrame/ChatFrame.scss';
