--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -8,3 +8,4 @@
 @import '../../pages/browser/Browser.scss';
 @import '../../pages/job/Job.scss';
 @import '../../pages/games/Games.scss';
+@import '../../pages/chat/Chat.scss';
