register and login work with backend

--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -9,3 +9,4 @@
 @import '../../components/buttons/selectFolderButton/SelectFolderButton.scss';
 @import '../../components/buttons/addContactButton/AddContactButton.scss';
 @import '../../components/buttons/interactionButton/InteractionButton.scss';
+@import '../../components/buttons/userButton/UserButton.scss';
