--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -31,3 +31,7 @@
 @import '../../components/chatRooms/ChatRooms.scss';
 @import '../../components/chatRoomsTab/ChatRoomsTab.scss';
 @import '../../components/chatFrame/ChatFrame.scss';
+@import '../../components/userLink/UserLink.scss';
+@import '../../components/input/Input.scss';
+@import '../../components/inputEmail/InputEmail.scss';
+@import '../../components/inputPass/InputPass.scss';
