--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -9,3 +9,5 @@
 @import '../../pages/job/Job.scss';
 @import '../../pages/games/Games.scss';
 @import '../../pages/chat/Chat.scss';
+@import '../../pages/login/Login.scss';
+@import '../../pages/register/Register.scss';
