--- a/src/components/user/User.scss
+++ b/src/components/user/User.scss
@@ -7,7 +7,13 @@
 		width: 177px;
 		height: 177px;
 		border-radius: 50%;
-		background: center / cover repeat url('../../assets/images/pic/example-ava.jpg');
+        & img {
+            width: 177px;
+            height: 177px;
+            border-radius: 50%;
+            object-fit: cover;
+            object-position: 0% 15%;
+        }
 	}
 	&__description {
 		font-family: $font-main;
