add settings page

--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -35,3 +35,6 @@
 @import '../../components/input/Input.scss';
 @import '../../components/inputEmail/InputEmail.scss';
 @import '../../components/inputPass/InputPass.scss';
+@import '../../components/signBlock/SignBlock.scss';
+@import '../../components/settingsImageChange/SettingsImageChange.scss';
+@import '../../components/buttons/saveChanges/SaveChanges.scss';
