--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -10,3 +10,4 @@
 @import '../../components/buttons/addContactButton/AddContactButton.scss';
 @import '../../components/buttons/interactionButton/InteractionButton.scss';
 @import '../../components/buttons/userButton/UserButton.scss';
+@import '../../components/buttons/imageUserUpload/ImageUserUpload.scss';
