--- a/src/assets/styles/pages.scss
+++ b/src/assets/styles/pages.scss
@@ -11,3 +11,4 @@
 @import '../../pages/chat/Chat.scss';
 @import '../../pages/login/Login.scss';
 @import '../../pages/register/Register.scss';
+@import '../../pages/settings/Settings.scss';
