--- a/src/components/buttons/loginButton/LoginButton.scss
+++ b/src/components/buttons/loginButton/LoginButton.scss
@@ -1,11 +1,23 @@
 .loginButton {
+    position: relative;
 	display: flex;
+    flex-direction: column;
 	align-items: center;
 	padding-right: 50px;
 	border: none;
 	background-color: transparent;
 	text-decoration: none;
 	color: white;
+    &__main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: transform .3s ease-out;
+        &:active {
+            transform: scale(.9);
+        }
+    }
 	
 	&__avatar {
 		padding-right: 10px;
@@ -23,4 +35,38 @@
 			transform: rotate(90deg);
 		}
 	}
+    &__modal {
+        opacity: 0;
+        display: none;
+        transition: opacity .3s ease-in;
+        &--visible {
+            position: absolute;
+            bottom: -115px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            background: rgba(72, 128, 161, .5);
+            padding: 20px;
+            border-radius: 8px;
+            opacity: 1;
+            & a, & button {
+                font-family: $font-main;
+                font-size: 18px;
+                font-weight: 400;
+                color: white;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+            & a {
+                text-decoration: none;
+            }
+            & button {
+                border: none;
+                background: transparent;
+                cursor: pointer;
+
+            }
+        }
+    }
 }
